magnific-popup and isotope

--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- title -->
         <title>Quickstart pack</title>
 
+        <!-- fevicon -->
+        <link rel="shortcut icon" type="image/png" href="assets/images/component/">
+
+        <!-- bootstrap -->
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- font-awesome -->
         <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+        <!-- owl carousel -->
         <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
+
+        <!-- animate -->
+        <link href="assets/css/animate.min.css" rel="stylesheet">
+
+        <!-- magnific-popup -->
+        <link href="assets/css/magnific-popup.css" rel="stylesheet">
+
+        <!-- main css -->
         <link href="assets/css/style.css" rel="stylesheet">
+
+        <!-- responsive -->
         <link href="assets/css/responsive.css" rel="stylesheet">
 
 
@@ -20,12 +39,34 @@
         <![endif]-->
     </head>
     <body>
+        <!-- ==================================================
+                        Start Header Area
+        =================================================== -->
+
+        <!-- ==================================================
+                        End Header Area
+        =================================================== -->
 
 
-
+        <!-- jquery -->
         <script src="assets/js/jquery.min.js"></script>
+
+        <!-- bootstrap js -->
         <script src="assets/js/bootstrap.min.js"></script>
+
+        <!-- owl carousel js -->
         <script src="assets/js/owl.carousel.min.js"></script>
+
+        <!-- wow -->
+        <script src="assets/js/wow.min.js"></script>
+
+        <!-- magnific-popup js -->
+        <script src="assets/js/jquery.magnific-popup.min.js"></script>
+
+        <!-- isotope js -->
+        <script src="assets/js/isotope.pkgd.min.js"></script>
+
+        <!-- main js -->
         <script src="assets/js/main.js"></script>
     </body>
 </html>
